--- a/iris-analysis.Rmd
+++ b/iris-analysis.Rmd
@@ -11,15 +11,18 @@ iris
 What is the mean `Sepal.Length` for `Species` Setosa?
 
 ```{r}
+#install.packages("tidyverse")
+library(tidyverse)
+
 iris %>% 
   filter(Species == "setosa") %>% 
   summarise(mean = mean(Sepal.Length))
 ```
 
 
-How many data points are in the `mtcars` data?
+How many data points are in the `iris` data?
 
 ```{r}
-
+dim(iris)[1]
 ```
 
